--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^12.1.10",
     "history": "^5.1.0",
     "react": "^17.0.2",
+    "react-data-table-component": "^7.4.5",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
